--- a/css/styles.css
+++ b/css/styles.css
@@ -44,8 +44,7 @@ img {
 .container.header {
   display: flex;
   justify-content: space-between;
-  padding: 24px 15px;
-  align-items: center;
+  padding: 0 15px;
 }
 
 .header-nav-list,
@@ -53,6 +52,7 @@ img {
   display: flex;
   margin: 0;
   gap: 40px;
+  padding: 24px 0;
 }
 .header-nav {
   display: flex;
@@ -97,6 +97,7 @@ img {
   line-height: 24px;
   letter-spacing: 0.32px;
   text-decoration: none;
+  /* padding: 24px 0; */
 }
 
 .header-contacts-container {
@@ -110,6 +111,7 @@ img {
   line-height: 24px;
   letter-spacing: 0.32px;
   text-decoration: none;
+  padding: 24px 0;
 }
 
 /* section-solution */
@@ -286,7 +288,7 @@ img {
 .portfolio-list-item {
   background: #fff;
   padding-bottom: 0px;
-  width: calc((100%-48px) / 3);
+  width: calc((100%-48) / 3);
 }
 
 .portfolio-item-container {
