--- a/css/styles.css
+++ b/css/styles.css
@@ -97,7 +97,7 @@ img {
   line-height: 24px;
   letter-spacing: 0.32px;
   text-decoration: none;
-  /* padding: 24px 0; */
+  padding: 24px 0;
 }
 
 .header-contacts-container {
@@ -232,7 +232,7 @@ img {
 }
 
 .teammate-card {
-  width: calc((100% - 72) / 4);
+  width: calc((100% - 72px) / 4);
   background: #fff;
   padding-bottom: 0;
   border-radius: 0px 0px 4px 4px;
@@ -288,7 +288,7 @@ img {
 .portfolio-list-item {
   background: #fff;
   padding-bottom: 0px;
-  width: calc((100%-48) / 3);
+  width: calc((100% - 48px) / 3);
 }
 
 .portfolio-item-container {
